fix bug with duplicated user_id